--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13",
-    "axios": "^1.11.0",
     "@hookform/resolvers": "^5.2.1",
+    "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.1",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "jalali-dayjs": "^0.0.1",
     "jalali-moment": "^3.3.11",
     "jalaliday": "^3.1.0",
     "lucide-react": "^0.542.0",
     "notistack": "^3.0.2",
-    "react-icons": "^5.5.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.8.2",
+    "react-swipeable": "^7.0.2",
+    "tailwindcss": "^4.1.13",
     "vite-plugin-pwa": "^1.0.3",
     "zod": "^4.1.8",
     "zustand": "^5.0.8"
