--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
+    "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.1",
     "axios": "^1.11.0",
@@ -27,6 +30,7 @@
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.8.2",
     "react-swipeable": "^7.0.2",
+    "swiper": "^12.0.2",
     "tailwindcss": "^4.1.13",
     "vite-plugin-pwa": "^1.0.3",
     "zod": "^4.1.8",
