--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "jalali-dayjs": "^0.0.1",
     "jalali-moment": "^3.3.11",
     "jalaliday": "^3.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
     "notistack": "^3.0.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.8.2",
     "react-swipeable": "^7.0.2",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
